--- a/index.html
+++ b/index.html
@@ -125,7 +125,34 @@
                          
                       </div>
                       <div class="screen-center">
-                          <div class="login"></div>
+                          <div class="login">
+                            <form action="">
+                              <div class="ligin-info">
+                                <div class="account">
+                                  <span>
+                               </span>
+                                  <input type="text" placeholder="用户名">
+                                </div>
+                                 <div class="account">
+                                  <span>
+                                  </span>
+                                  <input type="text" placeholder="密码">
+                                </div>
+                                <div class="token">
+                                  <input type="text" placeholder="验证码">
+                                  <img src="./img/yz.jpg" alt="">
+                                  <a href="#">换一张</a>
+                                </div>
+                                <input type="text" class="tijiao" value="登录">
+                              </div>
+                              <div class="other">
+                                <span></span>
+                                <a href="#">安全控件常见问题</a>
+                                <a href="#">忘记密码</a>
+                              </div>
+
+                            </form>
+                          </div>
                           <div class="zbcj"></div>
                           <div class="obj-light"></div>
                       </div>
